--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "@fontsource/pacifico": "^4.3.0",
     "@fontsource/poppins": "^4.3.0",
     "@fontsource/quicksand": "^4.3.0",
+    "@reduxjs/toolkit": "^1.5.1",
     "next": "10.2.0",
+    "next-redux-wrapper": "^6.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^15.0.2",
