--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
+    "react-hook-form": "^7.6.5",
     "react-hot-toast": "^1.0.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
