--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fontsource/pacifico": "^4.3.0",
     "@fontsource/poppins": "^4.3.0",
     "@fontsource/quicksand": "^4.3.0",
+    "@hookform/resolvers": "^2.5.1",
     "@reduxjs/toolkit": "^1.5.1",
     "firebase": "^8.6.2",
     "next": "10.2.0",
@@ -23,7 +24,8 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^15.0.2",
