--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.6.5",
     "react-hot-toast": "^1.0.2",
     "react-redux": "^7.2.4",
+    "react-st-modal": "^1.1.3",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
