--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^8.6.2",
     "next": "10.2.0",
     "next-redux-wrapper": "^6.0.2",
+    "next-transpile-modules": "^7.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
