--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^2.5.1",
     "@reduxjs/toolkit": "^1.5.1",
     "firebase": "^8.6.2",
+    "js-cookie": "^2.2.1",
     "next": "10.2.0",
     "next-redux-wrapper": "^6.0.2",
     "next-transpile-modules": "^7.2.0",
@@ -26,6 +27,7 @@
     "react-st-modal": "^1.1.3",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "yup": "^0.32.9"
   },
