--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/quicksand": "^4.3.0",
     "@hookform/resolvers": "^2.5.1",
     "@reduxjs/toolkit": "^1.5.1",
+    "@types/uuid": "^8.3.0",
     "firebase": "^8.6.2",
     "next": "10.2.0",
     "next-redux-wrapper": "^6.0.2",
@@ -28,6 +29,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
