--- a/.babelrc
+++ b/.babelrc
@@ -9,9 +9,9 @@
             "@components": "./components",
             "@styles": "./styles",
             "@public": "./public",
-            "@slices": "./slices",
-            "@sagas": "./sagas",
-            "@store": "./store",
+            "@slices": "./redux/slices",
+            "@sagas": "./redux/sagas",
+            "@store": "./redux/store",
             "@lib": "./lib"
 
           }
