--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/uuid": "^8.3.0",
     "firebase": "^8.6.2",
     "framer-motion": "^4.1.17",
-    "next": "10.2.0",
+    "hamburger-react": "^2.4.1",
+    "next": "^10.2.3",
     "next-redux-wrapper": "^6.0.2",
     "next-transpile-modules": "^7.2.0",
     "react": "17.0.2",
